2002-03-04  Sam Steingold  <sds@gnu.org>

	* foreign1.lisp (to-c-typedecl): c-pointer --> void*, not char*

2002-03-03  Sam Steingold  <sds@gnu.org>

	* version.h: 2.28 is released

2002-03-05  Sam Steingold  <sds@gnu.org>

	* spvw_garcol.d (gc_mark): added down_weakkvt(), up_weakkvt(),
	and case_weakkvt statements that call them (fixes weak HTs on
	the TYPECODES platforms)

2002-03-05  Sam Steingold  <sds@gnu.org>

	* array.d (elt_nreverse): do not use SIMPLE_NREVERSE for simple
	strings since TheSstring != TheSvector (breaks NREVERSE on Alpha)

2002-03-03  Sam Steingold  <sds@gnu.org>

	Compilation on Alpha/Linux
	* dfloat.d: SAVE_NUM_STACK/RESTORE_NUM_STACK want {} around them
	* lispbible.d (weakkvt_type): removed extra '|'
	* spvw_typealloc.d: one cannot use `obj' in allocate() portably
	(allocate_weakkvt_low): renamed from allocate_weakkvt()
	(allocate_weakkvt): call allocate_weakkvt_low()

2002-03-03  Sam Steingold  <sds@gnu.org>

	build process portability
	* makemake.in (data, clean1, ${TESTDIR}): use the appropriate slashes
	(RM) [win32]: set to 'del /q' (~ rm -f)
	(UTILDIR*, DOCDIR): define using SRCTOPDIR*+NEXT*, not sed(1)
	(PARENT_SRCTOPDIR_, PARENT_SRCTOPDIR_M): new vars
	(data, suite): use them so that `./configure /tmp/...' works
	* Makefile.devel (htmldoc): make split docs
	but do not copy impnotes.html to src/
	(SOURCES1): added clisp.lsm
	(acorn/pathname.txt): updated the regexp because of the
	src/pathname.d translation

2002-03-02  Sam Steingold  <sds@gnu.org>

	YAICBCFA (yet another ICONV_CONST build problem fix attempt)
	* stream.d: check ICONV_CONST before using it
	* unixconf.h.in (ICONV_CONST): reverted the 2001-12-25 patch:
	use #undef, not #define; just like all other *_CONST macros

2002-03-02  Arseny Slobodjuck  <ampy@ich.dvo.ru>

	* spvw_language.d (current_language_o): typo: argument should be
	`uintL', not `uint'

2002-03-02  Sam Steingold  <sds@gnu.org>

	* package.d (%SET-PACKAGE-LOCK): do not barf
	when the package list is empty